ID mapping for arknights

--- a/projects/arknights-id/Cargo.toml
+++ b/projects/arknights-id/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "sub_projects"
+name = "arknights-id"
 publish = false
 version = "0.0.0"
 authors = ["Aster <192607617@qq.com>"]
@@ -8,6 +8,7 @@ repository = "..."
 readme = "Readme.md"
 license = "MPL-2.0"
 edition = "2021"
+exclude = ["data/*"]
 
 [dependencies]
 
