Rename as arknights database

--- a/projects/arknights-database/Cargo.toml
+++ b/projects/arknights-database/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "arknights-data"
+name = "arknights-db"
 publish = false
 version = "0.0.0"
 authors = ["Aster <192607617@qq.com>"]
