--- a/projects/arknights-database/Cargo.toml
+++ b/projects/arknights-database/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
-name = "arknights-db"
-publish = false
+name = "arknights"
 version = "0.0.0"
 authors = ["Aster <192607617@qq.com>"]
-description = "..."
-repository = "..."
+description = "Arknights Database"
+repository = "https://github.com/oovm/arknights-rs"
+documentation = "https://docs.rs/arknights"
 readme = "Readme.md"
 license = "MPL-2.0"
 edition = "2021"
@@ -17,7 +17,3 @@ ndarray = "0.8.0"
 
 [features]
 default = []
-
-[package.metadata.wee]
-t = "cargo test"
-p = "cargo publish --allow-dirty"
