Add the rhodes island logo

--- a/projects/arknights-database/Cargo.toml
+++ b/projects/arknights-database/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "arknights"
-version = "0.0.0"
+name = "Arknights"
+version = "0.1.0"
 authors = ["Aster <192607617@qq.com>"]
 description = "Arknights Database"
 repository = "https://github.com/oovm/arknights-rs"
@@ -9,6 +9,9 @@ readme = "Readme.md"
 license = "MPL-2.0"
 edition = "2021"
 exclude = ["data/*"]
+
+[lib]
+name = "arknights"
 
 [dependencies]
 ndarray = "0.8.0"
